# ee205_lab13a_animal_farm_3

./: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Color.h  Gender.h  List.cpp  List.h  Mammal.cpp  Mammal.h  Node.cpp  Node.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Weight.cpp  Weight.h  config.h  main.cpp
